--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,16 @@ body {
   overflow: hidden;
   position: relative;
 }
+.hero-section .nav-bar .menu-list > div .personal-brand-id-menu {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  height: 23px;
+  width: 23px;
+}
+.hero-section .nav-bar .menu-list > div .personal-brand-id-menu img {
+  width: 100%;
+}
 .hero-section .nav-bar .menu-list > div .close-menu {
   position: absolute;
   top: 30px;
@@ -104,12 +114,36 @@ body {
 .hero-section .nav-bar .menu-list > div .close-menu img {
   width: 100%;
 }
+.hero-section .nav-bar .menu-list > div .social-media-menu-container {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.hero-section .nav-bar .menu-list > div .social-media-menu-container > div {
+  display: inline-block;
+}
+.hero-section .nav-bar .menu-list > div .social-media-menu-container > div:not(:last-child) {
+  margin-right: 20px;
+}
+.hero-section .nav-bar .menu-list > div .social-media-menu-container img {
+  opacity: 0;
+  width: 25px;
+  transform: translate(0%, 100%) matrix(1, 0, 0, 1, 0, 0);
+  will-change: transform, opacity;
+}
 .hero-section .nav-bar .menu-list > div ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translapate(-50%, -50%);
+  transform: translate(-50%, -50%);
   list-style-type: none;
+  padding: 0;
+}
+.hero-section .nav-bar .menu-list.-esActivo .social-media-menu-container img {
+  opacity: 1;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+  transition: all 0.5s ease-in-out;
 }
 .hero-section .nav-bar .menu-list.-esActivo ul {
   transition: all 2s ease-in-out;
@@ -130,38 +164,48 @@ body {
 .hero-section .nav-bar .menu-list ul li:not(:last-child) {
   margin-bottom: 30px;
 }
-.hero-section .nav-bar .menu-list ul li .menu-hover-indicator {
-  height: 2;
-  width: 100px;
-  color: red;
-}
 .hero-section .nav-bar .menu-list ul li a {
   text-decoration: none;
   color: white;
+}
+.hero-section .nav-bar .menu-list ul li a:hover + .menu-hover-indicator {
+  width: 100px;
+  opacity: 1;
+  margin-top: 10px;
+}
+.hero-section .nav-bar .menu-list ul li .menu-hover-indicator {
+  height: 3px;
+  width: 0;
+  margin: auto;
+  position: relative;
+  background: white;
+  opacity: 0;
+  margin-top: 0px;
+  transition: all 0.2s ease-in-out;
 }
 .hero-section .nav-bar .menu-list.-esActivo ul li:nth-child(1) {
   opacity: 1;
   transition-delay: 0.5s;
   transform: matrix(1, 0, 0, 1, 0, 0);
-  transition: all 0.6s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .hero-section .nav-bar .menu-list.-esActivo ul li:nth-child(2) {
   opacity: 1;
   transition-delay: 0.5s;
   transform: matrix(1, 0, 0, 1, 0, 0);
-  transition: all 0.8s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
 .hero-section .nav-bar .menu-list.-esActivo ul li:nth-child(3) {
   opacity: 1;
   transition-delay: 0.5s;
   transform: matrix(1, 0, 0, 1, 0, 0);
-  transition: all 1s ease-in-out;
+  transition: all 0.9s ease-in-out;
 }
 .hero-section .nav-bar .menu-list.-esActivo ul li:nth-child(4) {
   opacity: 1;
   transition-delay: 0.5s;
   transform: matrix(1, 0, 0, 1, 0, 0);
-  transition: all 1.2s ease-in-out;
+  transition: all 1.1s ease-in-out;
 }
 .hero-section .nav-bar .-esActivo {
   transition-property: all !important;
@@ -172,10 +216,11 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
   -moz-transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
   -o-transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
-  transition-duration: 0.5s !important;
+  transition-duration: 0.3s !important;
   transition-delay: 0.1s !important;
   animation-timing-function: ease-out;
   width: 700px !important;
+  max-width: 100% !important;
   box-shadow: 0px 0px 30px 0 rgba(0, 0, 0, 0.5);
   animation: menu_baja 1s forwards;
   -webkit-animation: menu_baja 1s forwards;
@@ -271,6 +316,7 @@ body {
   display: flex;
   align-items: center;
   position: relative;
+  margin-right: -10px;
 }
 .hero-section .nav-bar .link-and-menu .link {
   height: 30px;
@@ -290,7 +336,7 @@ body {
 }
 .hero-section .nav-bar .link-and-menu .link .real-link:hover + .active-border {
   display: block;
-  animation: 300ms ease-in-out appear 1;
+  animation: 150ms ease-in appear 1;
 }
 .hero-section .nav-bar .link-and-menu .link a {
   text-decoration: none;
@@ -300,7 +346,7 @@ body {
 }
 .hero-section .nav-bar .link-and-menu .menu-big-container {
   position: absolute;
-  right: 20px;
+  right: 0;
 }
 .hero-section .nav-bar .link-and-menu .menu-container {
   cursor: pointer;
@@ -701,6 +747,9 @@ body {
 @keyframes appear {
   0% {
     width: 0%;
+  }
+  50% {
+    width: 40%;
   }
   100% {
     width: 80%;
