--- a/css/main.scss
+++ b/css/main.scss
@@ -103,6 +103,18 @@ body{
             overflow: hidden;
             position: relative;
 
+            .personal-brand-id-menu{
+                position: absolute;
+                top: 30px;
+                left: 30px;
+                height: 23px;
+                width: 23px;
+    
+                img{
+                    width: 100%;
+                }
+            }
+
             .close-menu{
                 position: absolute;
                 top: 30px;
@@ -116,18 +128,46 @@ body{
                 }
             }
 
+            .social-media-menu-container{
+                position: absolute;
+                bottom: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+                
+                > div{
+                    display: inline-block;
+
+                    &:not(:last-child){
+                        margin-right: 20px;
+                    }
+                }
+
+                img{
+                    opacity: 0;
+                    width: 25px;
+                    transform: translate(0%, 100%) matrix(1, 0, 0, 1, 0, 0);
+                    will-change: transform, opacity;
+                }
+            }
+
             ul{
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                transform: translapate(-50%, -50%);
+                transform: translate(-50%, -50%);
                 list-style-type: none;
+                padding: 0;
             }
           }
-      
-      
+
+          .menu-list.-esActivo .social-media-menu-container img {
+            opacity: 1;
+            transform: matrix(1, 0, 0, 1, 0, 0);
+            transition: all .5s ease-in-out;
+          }
+
+
           .menu-list.-esActivo ul {
-            // transform: translate3d(0, 0%, 0);
             transition: all 2s ease-in-out;
       
           }
@@ -151,45 +191,56 @@ body{
                 margin-bottom: 30px;
             }
 
-            .menu-hover-indicator{
-                height: 2;
-                width: 100px;
-                color: red;
-            }
             
             a{
                 text-decoration: none;
                 color: white;
+
+                &:hover + .menu-hover-indicator{
+                    width: 100px;
+                    opacity: 1;
+                    margin-top: 10px;
+                }
             }
-          }
-      
+
+            .menu-hover-indicator{
+                height: 3px;
+                width: 0;
+                margin: auto;
+                position: relative;
+                background: white;
+                opacity: 0;
+                margin-top: 0px;
+                transition: all .2s ease-in-out;
+            }
+        }
       
           .menu-list.-esActivo ul li:nth-child(1) {
             opacity: 1;
             transition-delay: .5s;
             transform: matrix(1, 0, 0, 1, 0, 0);
-            transition: all .6s ease-in-out;
+            transition: all .5s ease-in-out;
           }
       
           .menu-list.-esActivo ul li:nth-child(2) {
             opacity: 1;
             transition-delay: .5s;
             transform: matrix(1, 0, 0, 1, 0, 0);
-            transition: all .8s ease-in-out;
+            transition: all .7s ease-in-out;
           }
       
           .menu-list.-esActivo ul li:nth-child(3) {
             opacity: 1;
             transition-delay: .5s;
             transform: matrix(1, 0, 0, 1, 0, 0);
-            transition: all 1.0s ease-in-out;
+            transition: all .9s ease-in-out;
           }
       
           .menu-list.-esActivo ul li:nth-child(4) {
             opacity: 1;
             transition-delay: .5s;
             transform: matrix(1, 0, 0, 1, 0, 0);
-            transition: all 1.2s ease-in-out;
+            transition: all 1.1s ease-in-out;
           }
       
           .-esActivo {
@@ -201,10 +252,11 @@ body{
             -webkit-transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
             -moz-transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
             -o-transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
-            transition-duration: .5s !important;
+            transition-duration: .3s !important;
             transition-delay: .1s !important;
             animation-timing-function: ease-out;
             width: 700px !important;
+            max-width: 100% !important;
             box-shadow: 0px 0px 30px 0 rgba(0, 0, 0, .5);
             animation: menu_baja 1s forwards;
             -webkit-animation: menu_baja 1s forwards;
@@ -324,6 +376,7 @@ body{
             display: flex;
             align-items: center;
             position: relative;
+            margin-right: -10px;
 
             .link{
                 height: 30px;
@@ -340,12 +393,11 @@ body{
                     transform: translateX(-50%);
                     height: 2px;
                     background: $text-accent;
-
                 }
                 
                 .real-link:hover + .active-border{
                     display: block;
-                    animation: 300ms ease-in-out appear 1;
+                    animation: 150ms ease-in appear 1;
                 }
                 
                 a{
@@ -377,7 +429,7 @@ body{
 
             .menu-big-container{
                 position: absolute;
-                right: 20px;
+                right: 0;
             }
 
             .menu-container{
@@ -853,6 +905,9 @@ body{
 @keyframes appear {
     0%{
         width: 0%;
+    }
+    50%{
+        width: 40%;
     }
     100%{
         width: 80%;
