--- a/css/main.css
+++ b/css/main.css
@@ -26,9 +26,9 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: rgba(144, 86, 255, 0.2);
+  background: rgba(54, 37, 211, 0.2);
   position: relative;
-  border: 0.5px solid #9056ff;
+  border: 0.5px solid #3625d3;
   position: relative;
   z-index: 55px;
 }
@@ -40,7 +40,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #9056ff;
+  background: #3625d3;
 }
 
 .section-wrapper {
@@ -332,7 +332,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   height: 2px;
-  background: #9056ff;
+  background: #3625d3;
 }
 .hero-section .nav-bar .link-and-menu .link .real-link:hover + .active-border {
   display: block;
@@ -413,7 +413,7 @@ body {
 }
 .home-section .hero-stripe-container .hero-title {
   font: 600 2.8rem/1.4 "Lato", sans-serif;
-  color: #9056ff;
+  color: #3625d3;
   margin-bottom: 30px;
 }
 .home-section .hero-stripe-container .hero-text {
@@ -464,7 +464,7 @@ body {
 .profile-section .profile-stripe-container {
   width: 100%;
   padding: 200px 0;
-  background-image: linear-gradient(to right, #84adff, #9058ff);
+  background-image: linear-gradient(to right, #9057ff, #3e46e4);
 }
 .profile-section .profile-stripe-container .text-container {
   text-align: center;
@@ -521,7 +521,7 @@ body {
 .profile-section .profile-cards-container .card .card-subtitle {
   font: 500 17px "Nunito", sans-serif;
   margin-bottom: 15px;
-  color: #9056ff;
+  color: #3625d3;
 }
 .profile-section .profile-cards-container .card .card-special-text {
   font: 400 16px/1.7 "Lato", sans-serif;
@@ -553,7 +553,7 @@ body {
 }
 .recent-work-section .text a {
   text-decoration: none;
-  color: #9056ff;
+  color: #3625d3;
 }
 .recent-work-section .work-collection-container {
   width: 70%;
@@ -624,12 +624,12 @@ body {
   position: relative;
   color: white;
   text-decoration: none;
-  border: 2px solid #9056ff;
+  border: 2px solid #3625d3;
   border-radius: 20px;
   transition: 250ms ease-in-out;
 }
 .recent-work-section .work-collection-container .work .work-goto:hover {
-  background: #9056ff;
+  background: #3625d3;
 }
 .recent-work-section .work-collection-container .w-1 {
   background: linear-gradient(to right, #1488cc, #2b32b2);
@@ -644,10 +644,10 @@ body {
   background: linear-gradient(109.6deg, #e12569 11.2%, #ad1b8c 91.1%);
 }
 .recent-work-section .work-collection-container .w-5 {
-  background: radial-gradient(1168px at 5.7% 13.5%, #bc0024 0%, #f0f0f0 90%);
+  background: linear-gradient(to right, #800080, #ffc0cb);
 }
 .recent-work-section .work-collection-container .w-6 {
-  background: linear-gradient(to left, #aa4b6b, #6b6b83, #3b8d99);
+  background: linear-gradient(to right, #00f260, #0575e6);
 }
 .recent-work-section .see-all-button-container {
   width: 100%;
@@ -658,31 +658,40 @@ body {
   padding: 10px 30px;
   font: 500 17px "Nunito", sans-serif;
   position: relative;
-  color: #9056ff;
+  color: #3625d3;
   text-decoration: none;
-  border: 2px solid #9056ff;
+  border: 2px solid #3625d3;
   border-radius: 30px;
   transition: 200ms ease-in-out;
   margin: auto;
 }
 .recent-work-section .see-all-button:hover {
-  background: #9056ff;
+  background: #3625d3;
   color: white;
 }
 .recent-work-section .see-all-button:hover .regular-img {
-  display: none;
+  opacity: 0;
 }
 .recent-work-section .see-all-button:hover .white-img {
-  display: inline-block;
+  opacity: 1;
+}
+.recent-work-section .see-all-button > div {
+  display: inline;
+  position: relative;
+  padding-left: 10px;
+  padding-right: 15px;
 }
 .recent-work-section .see-all-button img {
   height: 20px;
-  margin-left: 8px;
-  display: inline-block;
   vertical-align: top;
+  transition: 200ms ease-in-out;
+  opacity: 1;
+  position: absolute;
+  top: 0;
 }
 .recent-work-section .see-all-button .white-img {
-  display: none;
+  transition: 200ms ease-in-out;
+  opacity: 0;
 }
 .recent-work-section .see-all-button span {
   display: inline-block;
@@ -705,13 +714,13 @@ body {
 }
 .recent-design-section .text a {
   text-decoration: none;
-  color: #9056ff;
+  color: #3625d3;
 }
 
 .the-thing-section {
   width: 100%;
   padding: 170px 0;
-  background-image: linear-gradient(to right, #84adff, #9058ff);
+  background-image: linear-gradient(to right, #9057ff, #3e46e4);
 }
 .the-thing-section .card-container {
   width: 100%;
@@ -733,7 +742,7 @@ body {
 .the-thing-section .card-container .titles-stripe {
   height: 4px;
   width: 35px;
-  background: #9056ff;
+  background: #3625d3;
   margin-bottom: 10px;
 }
 .the-thing-section .card-container .title {
