--- a/css/main.css
+++ b/css/main.css
@@ -669,7 +669,7 @@ body {
   background: #3625d3;
   color: white;
 }
-.recent-work-section .see-all-button:hover .regular-img {
+.recent-work-section .see-all-button:hover .reSgular-img {
   opacity: 0;
 }
 .recent-work-section .see-all-button:hover .white-img {
@@ -780,10 +780,9 @@ body {
   margin: auto;
   background: #fff;
   box-shadow: 0 1px 10px 0px #0000001f;
-  padding: 25px;
+  padding: 30px;
   border-radius: 6px;
-  height: 400px;
-  transition: all 0.3s;
+  min-height: 400px;
 }
 @media screen and (max-width: 992px) {
   .person-slider-section .blog-slider {
@@ -800,7 +799,7 @@ body {
 }
 @media screen and (max-height: 500px) and (min-width: 992px) {
   .person-slider-section .blog-slider {
-    height: 350px;
+    height: 400px;
   }
 }
 .person-slider-section .blog-slider__item {
@@ -869,9 +868,9 @@ body {
   width: 300px;
   flex-shrink: 0;
   height: 300px;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  box-shadow: 1px 4px 10px 1px rgba(252, 56, 56, 0.2);
-  border-radius: 10px;
+  background-image: linear-gradient(147deg, #3625d3 0%, #a438fd 74%);
+  box-shadow: 1px 4px 10px 1px rgba(174, 56, 252, 0.2);
+  border-radius: 6px;
   transform: translateX(-80px);
   overflow: hidden;
 }
@@ -882,9 +881,9 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  border-radius: 10px;
-  opacity: 0.8;
+  background-image: linear-gradient(147deg, #3625d3 0%, #a438fd 74%);
+  border-radius: 6px;
+  opacity: 0.5;
 }
 .person-slider-section .blog-slider__img img {
   width: 100%;
@@ -932,34 +931,36 @@ body {
   transition: all 0.4s;
 }
 .person-slider-section .blog-slider__code {
-  color: #7b7992;
-  margin-bottom: 15px;
-  display: block;
-  font-weight: 500;
+  font: 500 14px "Nunito", sans-serif;
+}
+.person-slider-section .blog-slider__stripe {
+  height: 4px;
+  width: 35px;
+  background: #3625d3;
+  margin: 10px 0;
 }
 .person-slider-section .blog-slider__title {
-  font-size: 24px;
-  font-weight: 700;
-  color: #0d0925;
+  font: 500 24px "Nunito", sans-serif;
   margin-bottom: 20px;
 }
 .person-slider-section .blog-slider__text {
-  color: #4e4a67;
+  font: 400 17px/1.7 "Nunito", sans-serif;
   margin-bottom: 30px;
-  line-height: 1.5em;
 }
 .person-slider-section .blog-slider__button {
-  display: inline-flex;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  padding: 15px 35px;
-  border-radius: 50px;
-  color: #fff;
-  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+  padding: 9px 25px;
+  font: 500 15px "Nunito", sans-serif;
+  position: relative;
+  color: #3625d3;
   text-decoration: none;
-  font-weight: 500;
-  justify-content: center;
-  text-align: center;
-  letter-spacing: 1px;
+  border: 2px solid #3625d3;
+  border-radius: 30px;
+  transition: background 200ms ease-in-out, color 200ms ease-in-out !important;
+  margin: auto;
+}
+.person-slider-section .blog-slider__button:hover {
+  background: #3625d3;
+  color: white;
 }
 @media screen and (max-width: 576px) {
   .person-slider-section .blog-slider__button {
@@ -1002,8 +1003,8 @@ body {
   }
 }
 .person-slider-section .blog-slider__pagination .swiper-pagination-bullet {
-  width: 11px;
-  height: 11px;
+  width: 8px;
+  height: 8px;
   display: block;
   border-radius: 10px;
   background: #062744;
@@ -1012,7 +1013,7 @@ body {
 }
 .person-slider-section .blog-slider__pagination .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #fd3838;
+  background: #3625d3;
   height: 30px;
   box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
 }
