--- a/css/main.scss
+++ b/css/main.scss
@@ -814,7 +814,7 @@ body{
             &:hover{
                 background: $text-accent;
                 color: white;
-                .regular-img{
+                .reSgular-img{
                     opacity: 0;
                 }
                 .white-img{
@@ -943,10 +943,10 @@ body{
             margin: auto;
             background: #fff;
             box-shadow: 0 1px 10px 0px #0000001f;
-            padding: 25px;
+            padding: 30px;
             border-radius: 6px;
-            height: 400px;
-            transition: all .3s;
+            min-height: 400px;
+            // transition: all .3s;
           
            
           @media screen and (max-width: 992px) {
@@ -962,7 +962,7 @@ body{
           
           
           @media screen and (max-height: 500px) and (min-width: 992px) {
-                height: 350px;
+                height: 400px;
           }
           
           &__item {
@@ -1003,11 +1003,10 @@ body{
             width: 300px;
             flex-shrink: 0;
             height: 300px;
-            background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-            box-shadow: 1px 4px 10px 1px rgba(252, 56, 56, 0.2);
-            border-radius: 10px;
+            background-image: linear-gradient(147deg, $text-accent 0%, #a438fd 74%);
+            box-shadow: 1px 4px 10px 1px rgba(174, 56, 252, 0.2);
+            border-radius: 6px;
             transform: translateX(-80px);
-           
             overflow: hidden;
             
             &:after {
@@ -1017,9 +1016,9 @@ body{
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-              border-radius: 10px;
-            opacity: 0.8;
+            background-image: linear-gradient(147deg, $text-accent 0%, #a438fd 74%);            
+            border-radius: 6px;
+            opacity: 0.5;
         }
             
             img {
@@ -1074,37 +1073,41 @@ body{
           }
           
           &__code {
-            color: #7b7992;
-            margin-bottom: 15px;
-            display: block;
-            font-weight: 500;
-          }
+            font: 500 14px $font-1;
+        }
+        
+        &__stripe {
+            height: 4px;
+            width: 35px;
+            background: #3625d3;
+            margin: 10px 0;
+        }
           
-          &__title {
-            font-size: 24px;
-            font-weight: 700;
-            color: #0d0925;
+        &__title {
+            font: 500 24px $font-1;
             margin-bottom: 20px;
-          }
+        }
           
-          &__text {
-            color: #4e4a67;
+        &__text {
+            font: 400 17px/1.7 $font-1;
             margin-bottom: 30px;
-            line-height: 1.5em;
-          }
+        }
           
-          &__button {
-                display: inline-flex;
-            background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-            padding: 15px 35px;
-            border-radius: 50px;
-            color: #fff;
-            box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+        &__button {
+            padding: 9px 25px;
+            font: 500 15px $font-1;
+            position: relative;
+            color: $text-accent;
             text-decoration: none;
-            font-weight: 500;
-                justify-content: center;
-            text-align: center;
-            letter-spacing: 1px;
+            border: 2px solid $text-accent;
+            border-radius: 30px;
+            transition: background 200ms ease-in-out, color 200ms ease-in-out !important;
+            margin: auto;
+            &:hover{
+                background: $text-accent;
+                color: white;
+            }
+            
             @media screen and (max-width: 576px) {
               width: 100%;
             }
@@ -1120,20 +1123,20 @@ body{
            position: absolute;
             z-index: 21;
             right: 20px;
-            width: 11px!important;
+            width: 11px !important;
             text-align: center;
             left: auto!important;
             top: 50%;
             bottom: auto!important;
             transform: translateY(-50%);
             @media screen and (max-width: 768px) {
-             transform: translateX(-50%);
-                  left: 50%!important;
-              top: 205px;
-            width: 100%!important;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+                transform: translateX(-50%);
+                left: 50% !important;
+                top: 205px;
+                width: 100% !important;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
              &.swiper-pagination-bullets .swiper-pagination-bullet {
             margin: 8px 0;
@@ -1143,8 +1146,8 @@ body{
         }
             
             .swiper-pagination-bullet {
-            width: 11px;
-            height: 11px;
+            width: 8px;
+            height: 8px;
             display: block;
             border-radius: 10px;
             background: #062744;
@@ -1152,7 +1155,7 @@ body{
               transition: all .3s;
               &-active {
             opacity: 1;
-            background: #fd3838;
+            background: $text-accent;
             height: 30px;
             box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
                 
