--- a/css/main.css
+++ b/css/main.css
@@ -782,7 +782,7 @@ body {
   box-shadow: 0 1px 10px 0px #0000001f;
   padding: 30px;
   border-radius: 6px;
-  min-height: 400px;
+  height: 400px;
 }
 @media screen and (max-width: 992px) {
   .person-slider-section .blog-slider {
