--- a/css/main.scss
+++ b/css/main.scss
@@ -945,7 +945,7 @@ body{
             box-shadow: 0 1px 10px 0px #0000001f;
             padding: 30px;
             border-radius: 6px;
-            min-height: 400px;
+            height: 400px;
             // transition: all .3s;
           
            
