--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   margin: 0;
   position: relative;
+  overflow: hidden;
 }
 
 #particles-js {
@@ -49,6 +50,40 @@ body {
   padding: 0 30px;
   margin: auto;
   position: relative;
+}
+
+.loader-section {
+  height: 100%;
+  width: 100vw;
+  position: fixed;
+  background: white;
+  z-index: 999;
+}
+.loader-section .loader-container {
+  width: 120px;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.loader-section .loader-container img {
+  max-width: 100%;
+  width: 30px;
+}
+.loader-section .loader-container .progress-bar-container {
+  width: 100%;
+  margin-top: 30px;
+}
+.loader-section .loader-container .progress-bar-container .progress-bar {
+  width: 0%;
+  border-radius: 10px;
+  height: 4px;
+  background: #3625d3;
+}
+
+.loaded {
+  visibility: collapse;
 }
 
 .hero-section {
@@ -1022,6 +1057,72 @@ body {
     height: 11px;
     width: 30px;
   }
+}
+
+.more-about-me-section {
+  width: 100%;
+  padding: 170px 0 0;
+}
+.more-about-me-section .black-card {
+  color: white;
+  background: #293347;
+  padding: 50px;
+  box-shadow: 0 1px 5px #0000001a;
+  border-radius: 6px;
+  width: 75%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.more-about-me-section .black-card .title {
+  font: 500 24px "Nunito", sans-serif;
+  text-align: center;
+  width: 30%;
+}
+.more-about-me-section .black-card .text-container {
+  width: 50%;
+  padding: 0 40px;
+}
+.more-about-me-section .black-card .text-container .text {
+  font: 400 17px/1.7 "Nunito", sans-serif;
+  text-align: center;
+}
+.more-about-me-section .black-card .button-container {
+  width: 20%;
+  text-align: center;
+}
+.more-about-me-section .black-card .button-container .button {
+  margin: auto;
+  padding: 9px 25px;
+  font: 500 15px "Nunito", sans-serif;
+  position: relative;
+  color: white;
+  text-decoration: none;
+  border: 2px solid #3625d3;
+  border-radius: 30px;
+  transition: background 200ms ease-in-out, color 200ms ease-in-out !important;
+  margin: auto;
+}
+.more-about-me-section .black-card .button-container .button:hover {
+  background: #3625d3;
+}
+
+.footer-section {
+  width: 100%;
+  padding: 170px 0;
+  margin-top: -76px;
+  background: linear-gradient(to right, #9057ff, #3e46e4);
+}
+.footer-section .container {
+  text-align: center;
+}
+.footer-section .container .logo {
+  width: 40px;
+  margin: auto;
+}
+.footer-section .container .logo img {
+  width: 100%;
 }
 
 @keyframes appear {
