--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@ body{
     padding: 0;
     margin: 0;
     position: relative;
+    overflow: hidden;
 }
 
 #particles-js{
@@ -60,12 +61,53 @@ body{
     position: relative;
 }
 
+.loader-section{
+    height: 100%;
+    width: 100vw;
+    position: fixed;
+    background: white;
+    z-index: 999;
+    // display: none;
+
+    .loader-container{
+        width: 120px;
+        top: 50%;
+        left: 50%;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        text-align: center;
+
+        img{
+            max-width: 100%;
+            width: 30px;
+        }
+
+        .progress-bar-container{
+            width: 100%;
+            margin-top: 30px;
+    
+            .progress-bar{
+                width: 0%;
+                border-radius: 10px;
+                height: 4px;
+                background: $text-accent;
+            }
+        }
+    }
+
+}
+
+.loaded{
+    visibility: collapse;
+}
+
 .hero-section{
-    // background-image: linear-gradient(to right, #84adff, #9058ff);
     position: relative;
     padding: 0 40px;
     max-width: 1900px;
     width: 100%;
+    // height: 100vh;
+    // min-height: 600px;
     margin: auto;
     position: relative;
 
@@ -1168,6 +1210,80 @@ body{
             
           }
           
+        }
+    }
+
+    .more-about-me-section{
+        width: 100%;
+        padding: 170px 0 0;
+
+        .black-card{
+            color: white;
+            background: #293347;
+            padding: 50px;
+            box-shadow: 0 1px 5px #0000001a;
+            border-radius: 6px;
+            width: 75%;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .title{
+                font: 500 24px "Nunito", sans-serif;
+                text-align: center;
+                width: 30%;
+            }
+            
+            .text-container{
+                width: 50%;
+                padding: 0 40px;
+                
+                .text{
+                    font: 400 17px/1.7 "Nunito", sans-serif;
+                    text-align: center;
+                }
+            }
+            
+            .button-container{
+                width: 20%;
+                text-align: center;
+                .button{
+                    margin: auto;
+                    padding: 9px 25px;
+                    font: 500 15px $font-1;
+                    position: relative;
+                    color: white;
+                    text-decoration: none;
+                    border: 2px solid $text-accent;
+                    border-radius: 30px;
+                    transition: background 200ms ease-in-out, color 200ms ease-in-out !important;
+                    margin: auto;
+                    &:hover{
+                        background: $text-accent;
+                    }
+                }
+            }
+        }
+    }
+
+    .footer-section{
+        width: 100%;
+        padding: 170px 0;
+        margin-top: -76px;
+        background: $stripe-gradient;
+
+        .container{
+            text-align: center;
+            
+            .logo{
+                width: 40px;
+                margin: auto;
+
+                img{
+                    width: 100%;
+                }
+            }
         }
     }
 
